--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
          ========================================== -->
     <script>
         // --- 1. Logika Mengetik (Typing Effect) Halaman 1 ---
-        const textToType = "Haii Beib,\nselamat ulang tahun\nAku punya kejutan untukmu🥳";
+        const textToType = "Haii Haliza,\nselamat ulang tahun\nAku punya kejutan untukmu🥳";
         const typingElement = document.getElementById('typing-text');
         const btnNext1 = document.getElementById('btn-next-1');
         let typeIndex = 0;
@@ -512,4 +512,5 @@
 
     </script>
 </body>
+
 </html>
